--- a/src/package.xml
+++ b/src/package.xml
@@ -3,6 +3,7 @@
     <clientModule name="PredefinedFilters" version="1.0.0" xmlns="http://www.mendix.com/clientModule/1.0/">
         <widgetFiles>
             <widgetFile path="PredefinedFilters/PredefinedFilters.xml" />
+            <widgetFile path="PredefinedFilters/PredefinedFiltersContext.xml" />
         </widgetFiles>
         <files>
             <file path="PredefinedFilters/widget/" />
